--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Hitman's Portfolio Page</h1>
     <h2>I'm a Web Developer</h2>
     <hr />
-    <h1><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project </a></h1>
-    <img src="./assets/images/Screenshot 2025-10-29 094111.png" width="300" height="200" />
-    <br>
-    <h1><a href="../3.4 Birthday Invite Project/index.html">Birthday Project</a></h1>
-    <img src="./assets/images/birthday-invite.png"  height="200">
-    <hr>
+    <h1><a href="./public/movie-ranking.html">Movie Ranking Project </a></h1>
+    <img
+      src="./assets/images/Screenshot 2025-10-29 094111.png"
+      width="300"
+      height="200"
+    />
+    <br />
+    <h1><a href="./public/birthday-invite.html">Birthday Project</a></h1>
+    <img src="./assets/images/birthday-invite.png" height="200" />
+    <hr />
     <a href="./public/about.html">About me</a>
     <a href="./public/contact.html">Contact me</a>
   </body>
